# typer-ui

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/: copilot-instructions.md
.github/scripts/: bump_version.py
.github/workflows/: publish.yml
demo/: run.py  run_ui.py
demo/mycli/: __init__.py  cli.py
demo/mycli/commands/: __init__.py  users.py
docs/: PUBLISHING.md
src/typer_ui/: command_executor.py  introspector.py  main.py  ui_components.py
tests/: __init__.py  conftest.py  test_main.py  test_ui_components.py
