[project]
name = "typer-ui"
version = "0.1.0"
description = "A UI package for Typer CLI apps."
authors = [
    { name = "Amit Baswa" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "typer",
    "pydantic>=2.0.0",
    "nicegui"
]

[tool.setuptools]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
